namerd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: namerd
spec:
  selector:
    app: namerd
  ports:
  - name: namerd
    port: 80
    targetPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: namerd-admin
spec:
  selector:
    app: namerd
  ports:
  - name: admin
    port: 80
    targetPort: 9991
