sidecar.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 4141
---
apiVersion: v1
kind: Service
metadata:
  name: hello-admin
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 9990
---
apiVersion: v1
kind: Service
metadata:
  name: world-v1
spec:
  selector:
    app: world-v1
  ports:
  - name: http
    port: 80
    targetPort: 4141
---
apiVersion: v1
kind: Service
metadata:
  name: world-v1-admin
spec:
  selector:
    app: world-v1
  ports:
  - name: admin
    port: 80
    targetPort: 9990
---
