step2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: world-v1
spec:
  selector:
    app: world-v1
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: l5d
  name: l5d
spec:
  template:
    metadata:
      labels:
        app: l5d
    spec:
      volumes:
      - name: l5d-config
        configMap:
          name: "l5d-config"
      containers:
      - name: l5d
        image: buoyantio/linkerd:1.1.2
        args:
        - /io.buoyant/linkerd/config/config.yaml
        ports:
        - name: outgoing
          containerPort: 4140
          hostPort: 4140
        - name: incoming
          containerPort: 4141
        - name: admin
          containerPort: 9990
        volumeMounts:
        - name: "l5d-config"
          mountPath: "/io.buoyant/linkerd/config"
          readOnly: true

      - name: kubectl
        image: buoyantio/kubectl:v1.4.0
        args:
        - "proxy"
        - "-p"
        - "8001"
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-outgoing
spec:
  selector:
    app: l5d
  type: LoadBalancer
  ports:
  - name: outgoing
    port: 80
    targetPort: 4140
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-incoming
spec:
  selector:
    app: l5d
  type: LoadBalancer
  ports:
  - name: incoming
    port: 80
    targetPort: 4141
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-admin
spec:
  selector:
    app: l5d
  type: LoadBalancer
  ports:
  - name: admin
    port: 80
    targetPort: 9990
