dedicatedsvcingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-admin
spec:
  selector:
    app: l5d
  ports:
  - name: admin
    port: 80
    targetPort: 9990
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-outgoing
spec:
  selector:
    app: l5d
  ports:
  - name: outgoing
    port: 80
    targetPort: 4140
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-incoming
spec:
  selector:
    app: l5d
  ports:
  - name: incoming
    port: 80
    targetPort: 4141
---
apiVersion: v1
kind: Service
metadata:
  name: world-v1
spec:
  selector:
    app: world-v1
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: "linkerd"
spec:
  backend:
    serviceName: world-v1
    servicePort: http
  rules:
  - http:
      paths: 
      - path: /rest/hello
        backend:
          serviceName: hello
          servicePort: http
      - path: /rest/world
        backend:
          serviceName: world-v1
          servicePort: http
