hello.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-admin
spec:
  selector:
    app: l5d
  ports:
  - name: admin
    port: 80
    targetPort: 9990
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-outgoing
spec:
  selector:
    app: l5d
  ports:
  - name: outgoing
    port: 80
    targetPort: 4140
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-incoming
spec:
  selector:
    app: l5d
  ports:
  - name: incoming
    port: 80
    targetPort: 4141
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  namespace: hello
annotations:
    kubernetes.io/ingress.class: "linkerd"
spec:
  backend:
    serviceName: hello
    servicePort: http
  rules:
  - http:
      paths: 
      - path: /rest/hello
        backend:
          serviceName: hello
          servicePort: http
---
apiVersion: v1
kind: Route
metadata:
  name: hello-l5d-incoming
spec:
  host: hello.acme.com
  to:
    kind: Service
    name: l5d-incoming
---
apiVersion: v1
kind: Route
metadata:
  name: hello-l5d-admin
spec:
  host: l5d.hello.acme.com
  to:
    kind: Service
    name: l5d-admin
---
